deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mini-metrics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mini-metrics
  template:
    metadata:
      labels:
        app: mini-metrics
    spec:
      containers:
        - name: mini-metrics
          image: mini-metrics-image
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
