service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mini-metrics-service
spec:
  selector:
    app: mini-metrics
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
