ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: services-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: mini-metrics.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mini-metrics-service
                port:
                  number: 80
